--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to our React-based E-commerce Store Project! As a web developer, your contributions to this project will be invaluable in creating an online store that offers customers a seamless and enjoyable shopping experience.
+ "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>E-commerce Store React
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
